working ip filters and jwt in all call